--- a/Menu/Base.lproj/Main.storyboard
+++ b/Menu/Base.lproj/Main.storyboard
@@ -20,24 +20,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestaurantCell" rowHeight="200" id="Zv4-Mx-o0V">
-                                <rect key="frame" x="0.0" y="28" width="375" height="200"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestaurantCell" rowHeight="220" id="Zv4-Mx-o0V">
+                                <rect key="frame" x="0.0" y="28" width="375" height="220"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zv4-Mx-o0V" id="Bd0-RX-Y5r">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FoodRepublic" translatesAutoresizingMaskIntoConstraints="NO" id="LO2-Sa-Pfd">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FoodRepublic" translatesAutoresizingMaskIntoConstraints="NO" id="LO2-Sa-Pfd">
+                                            <rect key="frame" x="10" y="10" width="355" height="160"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Republic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3E-mz-v7a">
-                                            <rect key="frame" x="10" y="154" width="139" height="27.5"/>
+                                            <rect key="frame" x="10" y="180" width="139" height="27.5"/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="200m" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Diq-7r-48s">
-                                            <rect key="frame" x="322" y="160" width="45" height="21"/>
+                                            <rect key="frame" x="322" y="186" width="45" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -45,14 +45,14 @@
                                     </subviews>
                                     <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstItem="LO2-Sa-Pfd" firstAttribute="leading" secondItem="Bd0-RX-Y5r" secondAttribute="leading" id="4UE-t8-rpG"/>
+                                        <constraint firstItem="LO2-Sa-Pfd" firstAttribute="leading" secondItem="Bd0-RX-Y5r" secondAttribute="leading" constant="10" id="4UE-t8-rpG"/>
                                         <constraint firstItem="M3E-mz-v7a" firstAttribute="leading" secondItem="Bd0-RX-Y5r" secondAttribute="leading" constant="10" id="Epz-y1-hcT"/>
                                         <constraint firstItem="Diq-7r-48s" firstAttribute="baseline" secondItem="M3E-mz-v7a" secondAttribute="baseline" id="IPE-Uj-Ieh"/>
                                         <constraint firstAttribute="bottom" secondItem="LO2-Sa-Pfd" secondAttribute="bottom" constant="50" id="LHu-Lz-DLS"/>
-                                        <constraint firstAttribute="trailing" secondItem="LO2-Sa-Pfd" secondAttribute="trailing" id="QtO-pP-qNd"/>
-                                        <constraint firstItem="LO2-Sa-Pfd" firstAttribute="top" secondItem="Bd0-RX-Y5r" secondAttribute="top" id="Rax-w8-cqL"/>
+                                        <constraint firstAttribute="trailing" secondItem="LO2-Sa-Pfd" secondAttribute="trailing" constant="10" id="QtO-pP-qNd"/>
+                                        <constraint firstItem="LO2-Sa-Pfd" firstAttribute="top" secondItem="Bd0-RX-Y5r" secondAttribute="top" constant="10" id="Rax-w8-cqL"/>
                                         <constraint firstAttribute="trailing" secondItem="Diq-7r-48s" secondAttribute="trailing" constant="8" id="Vb0-kd-ork"/>
-                                        <constraint firstItem="M3E-mz-v7a" firstAttribute="top" secondItem="LO2-Sa-Pfd" secondAttribute="bottom" constant="4" id="y7W-yE-WOa"/>
+                                        <constraint firstItem="M3E-mz-v7a" firstAttribute="top" secondItem="LO2-Sa-Pfd" secondAttribute="bottom" constant="10" id="y7W-yE-WOa"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -89,7 +89,7 @@
             </objects>
             <point key="canvasLocation" x="162" y="18"/>
         </scene>
-        <!--Menu View Controller-->
+        <!--Food Republic-->
         <scene sceneID="gud-XT-Bi0">
             <objects>
                 <viewController id="Cir-cr-ERl" customClass="MenuViewController" customModule="Menu" customModuleProvider="target" sceneMemberID="viewController">
@@ -102,11 +102,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2qq-Zf-gP5">
-                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="vKe-88-1UX">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="261"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FoodRepublic" translatesAutoresizingMaskIntoConstraints="NO" id="fbW-zK-uxs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="261"/>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QR9-Sw-tjA">
+                                            <rect key="frame" x="138" y="115" width="99.5" height="31.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="26"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <constraints>
+                                        <constraint firstItem="fbW-zK-uxs" firstAttribute="top" secondItem="vKe-88-1UX" secondAttribute="top" id="09z-kx-ttY"/>
+                                        <constraint firstItem="fbW-zK-uxs" firstAttribute="leading" secondItem="vKe-88-1UX" secondAttribute="leading" id="1cB-3R-hDc"/>
+                                        <constraint firstItem="QR9-Sw-tjA" firstAttribute="centerY" secondItem="vKe-88-1UX" secondAttribute="centerY" id="FJI-DF-apH"/>
+                                        <constraint firstAttribute="bottom" secondItem="fbW-zK-uxs" secondAttribute="bottom" id="GeR-fB-qZs"/>
+                                        <constraint firstItem="QR9-Sw-tjA" firstAttribute="centerX" secondItem="vKe-88-1UX" secondAttribute="centerX" id="ihe-FG-7aL"/>
+                                        <constraint firstAttribute="trailing" secondItem="fbW-zK-uxs" secondAttribute="trailing" id="tXR-Uu-19b"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuCell" rowHeight="100" id="Ict-UD-PVW" customClass="MenuItemCell" customModule="Menu" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="289" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ict-UD-PVW" id="CVB-gN-a7z">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
@@ -217,9 +242,9 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2qq-Zf-gP5" firstAttribute="top" secondItem="OGU-JP-LVg" secondAttribute="top" constant="64" id="4iJ-CE-uyZ"/>
+                            <constraint firstItem="2qq-Zf-gP5" firstAttribute="top" secondItem="OGU-JP-LVg" secondAttribute="top" id="4iJ-CE-uyZ"/>
                             <constraint firstAttribute="trailing" secondItem="UZa-vl-MmW" secondAttribute="trailing" id="6dw-bU-Hd5"/>
                             <constraint firstAttribute="bottom" secondItem="UZa-vl-MmW" secondAttribute="bottom" id="94w-xu-kQ3"/>
                             <constraint firstItem="UZa-vl-MmW" firstAttribute="top" secondItem="2qq-Zf-gP5" secondAttribute="bottom" id="MOK-Gr-3bh"/>
@@ -228,6 +253,7 @@
                             <constraint firstAttribute="trailing" secondItem="2qq-Zf-gP5" secondAttribute="trailing" id="my1-N5-A9D"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Food Republic" id="UNd-Yp-yJ3"/>
                     <connections>
                         <outlet property="bottomLayout" destination="94w-xu-kQ3" id="pNa-hn-YaA"/>
                         <outlet property="tableView" destination="2qq-Zf-gP5" id="6Wy-wx-YIa"/>
@@ -524,8 +550,8 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CARD NUMBER" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L7l-ZV-0VO">
                                         <rect key="frame" x="8" y="8" width="331" height="31"/>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" textContentType="cc-number"/>
                                         <connections>
                                             <outlet property="delegate" destination="Rcp-8P-Lp6" id="csH-WZ-arO"/>
                                         </connections>
@@ -547,7 +573,7 @@
                                         <rect key="frame" x="8" y="8" width="157.5" height="31"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" textContentType="name"/>
                                         <connections>
                                             <outlet property="delegate" destination="Rcp-8P-Lp6" id="UNC-YT-m9m"/>
                                         </connections>
@@ -569,7 +595,7 @@
                                         <rect key="frame" x="8" y="8" width="59" height="31"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                         <connections>
                                             <outlet property="delegate" destination="Rcp-8P-Lp6" id="jPL-re-KDs"/>
                                         </connections>
@@ -591,7 +617,7 @@
                                         <rect key="frame" x="8" y="8" width="58.5" height="31"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                         <connections>
                                             <outlet property="delegate" destination="Rcp-8P-Lp6" id="s94-ic-PpM"/>
                                         </connections>
